Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24958

Can't add Alt+S, Alt+C, Alt+F shortcut for Show Containing Folder

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.15.0-beta1
    • Qt Creator 4.13.3
    • Editors
    • None
    • Ubuntu 20.04.1
    • 0fa391c7d344fe957edf2fd155414f2781e19b08 (qt-creator/qt-creator/master)

    Description

      Steps to reproduce:

      • Set the shortcut for Show Containing Folder to Alt+S, Alt+C, Alt+F.
      • Try it out in the editor. An 's' will be entered and Creator detects the following keys as Alt+C, Alt+F, which is the shortcut for the code paster thing.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-24958
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes