Make it possible to assign global shortcut to "Show in Explorer/Finder"

So it works consistently for the project tree and when in editors.
The action ID changes from ProjectExplorer.ShowInGraphicalShell to
QtCreator.ShowInGraphicalShell.

Fixes: QTCREATORBUG-24958
Change-Id: I4c89e61997183401080dd64e66c4fec681b53241
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>